bg(mobile-nav): fix mobile navigation not showing up
[Fixes #163571991]

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,11 @@ button.small {
   padding: 8px 12px;
 }
 
+button.transparent {
+  background-color: transparent;
+  color: #fff;
+}
+
 button.danger {
   background: #b82e33;
 }
